--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "ag-grid-angular": "^32.3.3",
-    "ag-grid-community": "^32.3.3",
+    "ag-grid-angular": "^31.0.3",
+    "ag-grid-community": "^31.0.3",
+    "primeng": "^16.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
